--- a/03-AI-Driven-Equipment-Maintenance-Model-Selection.ipynb
+++ b/03-AI-Driven-Equipment-Maintenance-Model-Selection.ipynb
@@ -95,8 +95,7 @@
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.metrics import accuracy_score, roc_auc_score, roc_curve\n",
-        "from sklearn.model_selection import cross_val_score\n",
-        "import joblib"
+        "from sklearn.model_selection import cross_val_score"
       ],
       "metadata": {
         "id": "JAqkYT4vhMxW"
@@ -1165,33 +1164,6 @@
       "metadata": {
         "id": "bsQkpfjiF5D5"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Save model\n",
-        "joblib.dump(pipeline, \"svm_model.pkl\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hEInFPalmBgn",
-        "outputId": "e272d2d7-8339-48b2-9391-d4108d5afb63"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['svm_model.pkl']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 37
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -2839,40 +2811,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "\n",
-        "# Get current working directory\n",
-        "current_dir = os.getcwd()\n",
-        "\n",
-        "# Define the custom name for the model\n",
-        "custom_name = \"AI-Driven-Equipment-Maintenance-H2O-Model.zip\"\n",
-        "\n",
-        "# Save the model with the custom name\n",
-        "model_path = h2o.save_model(model=aml.leader, path=os.path.join(current_dir, custom_name), force=True)\n",
-        "\n",
-        "print(f\"Model saved at: {model_path}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-FSPz0RDYXsI",
-        "outputId": "9dede0a8-78af-4f42-f9da-3c5dbc155a0f"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model saved at: /content/AI-Driven-Equipment-Maintenance-H2O-Model.zip/StackedEnsemble_BestOfFamily_4_AutoML_1_20250501_35029\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#Print results\n",
         "print(aml.leaderboard)\n",
         "\n",
@@ -3609,18 +3547,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Save the trained model\n",
-        "predictor.save(\"autogluon_model\")"
-      ],
-      "metadata": {
-        "id": "AyAiSK483dqB"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
